# wetter-berg

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  base_model.py  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
api_service/: api_service.py
api_service/utils/: create_env_file.py
discord_client/: discord_client.py
forecast_service/: forecast_service.py
forecast_service/enums/: daily_weather_data_points_enum.py  hourly_weather_data_points_enum.py
forecast_service/models/: daily_snow_forecast_response.py  hourly_snow_forecast_response.py  snowfall_hour_range.py
